--- a/index.html
+++ b/index.html
@@ -4,7 +4,84 @@
         <title>PVD Page</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
         <body>
-            <h1>Welcome to Providence</h1>
-        </body>
+        <nav class = "navbar navbar-expand-lg navbar-light bg-light">
+            <div class = "container">
+                <div class = "col-sm">
+                    <p style="text-align: center; margin: 0; color: orange;" class="navbar-text">
+                        CITY OF PROVIDENCE 
+                    </p> 
+            </div>
+                <div class = "col-sm">
+                    <img class="center-block" style="marginL 0;" src="http://bit.ly/pvdlogo"/>        
+            </div>
+                <div class = "col-sm">
+                    <p style ="text-align: center; margin: 0;" class="navbar-text">
+                        MAYOR JORGE O. ELORZA 
+                    </p>
+                </div>
+            </div>
+        </nav>
+        <nav class="nav nav-fill bg-grey">
+            <a href="#" class="nav-item nav-link">CITY HALL</a>
+            <a href="#" class="nav-item nav-link">DOING BUSINESS</a>
+            <a href="http://www.providenceri.gov/event/" class="nav-item nav-link">EVENTS</a>
+            <a href="http://www.providenceri.gov/news-events/" class="nav-item nav-link">NEWS</a>
+            <a href="http://www.providenceri.gov/pvd-311/" class="nav-item nav-link">PVD 311</a>
+            <a href="https://www.goprovidence.com/" class="nav-item nav-link">EXPLORE</a>
+        </nav>
+        
+        <section class="home-hero" style="background-image: url(http://bit.ly/pvdskylines); height: 300px; background-size:cover; background-position-x: 50%; background-position-y: 50%;"></section>
+          <div class="container">
+              <div class="row" style="margin-top: 25px">
+              <div class="col-sm">
+                      <h4 style="text-align: center"> What Can We Help You With?</h4>
+                      <button type= "button" class = "btn btn-lg" style= "width: 100%; background-color: orange; border: none; border-radius: none;">I WANT TO....</button>
+                      <div class="card" style="background-color: #005d73; color: white;">
+                      <div class="card-body">
+                          <h2 class="card-title" style="text-align: center;">Top Requests</h2>
+                          <p class="card-text">
+                              <a href="http://www.providenceri.gov/collector/online-tax-payment-system/"  style = "color: white">Pay Taxes</br></a> 
+                              Snow Ready</br>
+                              <a href="https://wmq.etimspayments.com/pbw/include/providence/input.jsp" style ="color:white">Pay my Parking Ticket</br></a> 
+                              <a href="http://www.providenceri.gov/pvd-311/" style="color:white">Report a Problem</br></a>
+                              <a href="http://www.providenceri.gov/oeo/" style="color:white">Job Opportunities</br></a>
+                              <a href="http://www.providenceri.gov/inspection-standards/" style="color:white">Inspections and Standards</br></a>
+                              <a href="http://www.providenceri.gov/animal-control/adoptions/" style ="color:white">Animal Adoptions</br></a>
+                              <a href="http://www.providenceri.gov/vital-records/" style="color:white">Marriage, Birth, Death Certificates</br></a>
+                              <a href="http://www.providenceri.gov/purchasing/how-to-submit-a-bid/" style="color:white">How to Find RFPs and Submit a Bid</a> 
+                          </p>
+                          </div> 
+                      </div>
+                  </div>
+                  <div class="col-sm">
+                     <div class="card">
+                     <div class="card-body">
+                          <h2 class="card-title">Mayor Elorza Announces Moody's Upgrade of Prividence's Outlook to Stable from Negative</h2>
+                          <p class="card-text">PROVIDENCE, RI - Mayory  Jorge Elorza today announced that Moody's Investors Service has upgraded the City of Providence’s outlook to stable from negative. Moody’s also affirmed the City’s Baa1 general obligation rating and Baa2 lease ratings. According to the agency, the upgrade reflects Providence’s improved financial position, manageable fixed costs and growing economy.
+“Moody’s upgrade recognizes the progress we’ve made through our commitment to long-term planning and fiscal responsibility,” said Mayor Jorge O. Elorza. “We’re a city on the rise and while this is big news, we must continue to keep a close eye on our finances to keep Providence going strong.” In its report, Moody’s noted that Providence serves as a regional economic center and pointed to improved budgeting practices and a stabilizing financial position due to multiple years of positive operating performance. The City realized a $5.4 million operating surplus in fiscal year 2017, bringing its Operating Fund balance to $2.3 million. The analysis underscored the elimination of the City’s cumulative deficit three years ahead of its Combined Deficit Reduction Payment Plan schedule. A $3.5 million surplus is expected for fiscal year 2018 for additional growth to reserves.
+Other factors considered included pension savings achieved through multiple years of early payments of the city’s ARC; improvement in funding for long-term liabilities; a growing tax base with growing economic development; and decline in unemployment.
+In 2016, Fitch Ratings upgraded the City’s outstanding General Obligation (GO) Bonds to ‘A-‘ and assigned a ‘stable’ outlook. Fitch also upgraded Providence’s Issuer Default Rating (IDR) to ‘BBB’ from ‘BBB-‘.
+</p>
+                          <a href="#" class="card-link">MORE</a>
+                      </div>  
+                  </div>
+                  </div> 
+                  <div class="col-sm">
+                       <div class="card">
+                  <div class="card-body">
+                          <h2 class="card-title">Mayor Elorza Announces Appointment to United States Conference of Mayors Board of Trustees</h2>
+                          <p class="card-text">PROVIDENCE, RI - Mayor Jorge O. Elorza today announced he has been appointed to the Board of Trustees of the U.S. Conference of Mayors (USCM), the top tier of leadership positions within the organization, which held its 86th annual meeting in Boston from June 8 through June 11. Mayor Elorza joins Boston (MA) Mayor Martin J. Walsh as the USCM’s newest Trustees who, along with the top three officers and past presidents, make up the Executive Committee of the organization.
+“I am proud to be elected to this leadership position and I thank my fellow mayors for their support,” said Mayor Elorza. “Mayors across the country are stepping up to tackle frontline issues in America in ways that are results-oriented and bi-partisan. While the divisive forces that seek to separate us from one another seemingly grow stronger every day, it is our unique role as mayors to tackle the issues in a way that brings our residents together.”
+During the conference, more than 250 mayors discussed a wide variety of bipartisan priorities that contribute to the overall health of America’s cities, as well as considered and adopted the policy resolutions that guide the national advocacy agenda of the organization. The policy positions adopted at the annual meeting collectively represent the views of the nation’s mayors and are distributed to the President of the United States and Congress.
+In his new role as trustee, Mayor Elorza will continue to lead on issues of economic opportunity, equity and inequality in Providence and among his colleagues nationwide. He currently serves as Vice Chair of the Standing Committee on Community Development and Housing and Co-chair of the USCM Immigration Reform Task Force that has urged Congress to pass the Dream Act and has discussed immigration issues with Attorney General Jeff Sessions and former Department of Homeland Security Secretary and current White House Chief of Staff General John Kelly.
+Earlier this year, Providence was one of only six cities nationwide to be recognized during the 2018 Childhood Obesity Prevention Awards at the USCM’s 86th Winter Meeting in Washington D.C. The awards went to cities with “outstanding programs that encourage healthy weight through balanced diet choices and regular physical activity.” Providence was awarded a $25,000 grant for its program Eat Play Learn PVD, which targets underrepresented youth and aims to provide greater access for the target populations to summer camps, summer meals, and learning opportunities that will address both childhood obesity and school readiness.
+About USCM
+The Conference holds its Winter Meeting each January in Washington, D.C. and an Annual Meeting each June in a different U.S. city. Additional meetings and events are held as directed by the Conference leadership. Conference members speak with a united voice on organizational policies and goals. Mayors contribute to the development of national urban policy by serving on one or more of the conference’s standing committees. Conference policies and programs are developed and guided by an Executive Committee and Advisory Board, as well as the standing committees and task forces which are formed to meet changing needs.
+During the Conference’s Annual Meeting in June, standing committees recommend policy positions they believe should be adopted by the organization. The policy positions adopted at the annual meeting collectively represent the views of the nation’s mayors and are distributed to the President of the United States and Congress. In addition to the ongoing work of the Conference’s standing committees, mayors are organized into task forces to examine and act on issues that demand special attention such as civic innovation, economic mobility, hunger and homelessness, and infrastructure. Learn more about the conference here.</p> 
+                          <a href="#" class="card-link">MORE</a>
+                  </div>
+              </div>
+          </div> 
+          </body>
     </head>
 </html>
