--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             </div>
         </nav>
         <nav class="nav nav-fill bg-grey">
+            <!--Missing dropdowns for City Hall and Doing Business with links to the drop down content.  W3 Schools has good info on hover dropdowns-->
             <a href="#" class="nav-item nav-link">CITY HALL</a>
             <a href="#" class="nav-item nav-link">DOING BUSINESS</a>
             <a href="http://www.providenceri.gov/event/" class="nav-item nav-link">EVENTS</a>
@@ -40,6 +41,7 @@
                       <div class="card-body">
                           <h2 class="card-title" style="text-align: center;">Top Requests</h2>
                           <p class="card-text">
+                              <!--Missing snow ready link http://www.providenceri.gov/snow-ready/be-snow-ready/-->
                               <a href="http://www.providenceri.gov/collector/online-tax-payment-system/"  style = "color: white">Pay Taxes</br></a> 
                               Snow Ready</br>
                               <a href="https://wmq.etimspayments.com/pbw/include/providence/input.jsp" style ="color:white">Pay my Parking Ticket</br></a> 
